# ML_Library

./: .gitignore  CMakeLists.txt  Housing.csv  readme.md  sampleCMakeLists.txt  trial.csv
.cph/: .A_Sakurako_and_Kosuke.cpp_d480695197392ed885cd12fd7b95dcad.prob  .B_Sakurako_and_Water.cpp_481023c5f25f1adc91422100edb5ab77.prob  .C_Sakurako_s_Field_Trip.cpp_97073f9bdff5000bc6e628ebce189939.prob  .D_Kousuke_s_Assignment.cpp_01d905eeb84e543e3bef36eb8d6f82f3.prob
include/: KMeans.h  KNNclass.h  KNNreg.h  dataParser.h  dataUtils.h  dimensionalityReduction.h  linearRegression.h  logisticRegression.h  makeMatrix.h  metrics.h  models.h
src/: a  a.out  dataParser.cpp  main.cpp  read_data.cpp  sampleMain.cpp
